Updating Stagg News and Pro Shop specials.

--- a/index.html
+++ b/index.html
@@ -280,38 +280,6 @@
         <div class="row g-5" data-masonry='{"percentPosition": true }'>
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
-              <div class="image-area vertical-stag">
-                <img
-                  class="vertical-stag"
-                  loading="lazy"
-                  rel="preload"
-                  src="images/vertical-stag.jpg"
-                  alt=""
-                />
-              </div>
-
-              <div class="inner-content-area d-flex">
-                <div class="top-area">
-                  <h3 class="title">Member Appreciation Event</h3>
-
-                  <p>
-                    <b>Members, we appreciate you!</b> Come out on
-                    <b>December 3rd</b> and save like you never have in the golf
-                    shop. All apparel will be 60% OFF. All Golf Shoes, bags, and
-                    accessories 1/2 price. Cleveland Putters 35% OFF. All in-
-                    stock clubs 20% OFF. Bridgestone and Vice Golf Balls 1/2
-                    off.
-                    <b
-                      >Plus, Chad Myers Golf LLC will sponsor appetizers and
-                      drinks from 5-7pm.</b
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="single-blog-area-start border-left">
               <a
                 href="/assets/pdfs/Stagg-Hill-Short-Game-Render.pdf"
                 target="_blank"
@@ -408,8 +376,12 @@
                     <hr />
                     <div class="specials">
                       <h5>🔥 Current Pro Shop Specials</h5>
-                      <p class="deal">40% OFF Adidas Shoes in Stock</p>
-                      <p class="deal">25% OFF T-Shirts in Stock</p>
+                      <p class="deal">
+                        50% OFF Vice and Bridgestone Golf Balls
+                      </p>
+                      <p class="deal">30% OFF Titleist Hats</p>
+                      <p class="deal">40-50% OFF all Apparel</p>
+                      <p class="deal">50% OFF Select FJ and Adidas shoes</p>
                     </div>
                   </div>
                   <div class="row link-bar flex-row">
