--- a/pro-shop.html
+++ b/pro-shop.html
@@ -124,18 +124,18 @@
               <div class="col-12" style="flex-grow: 1">
                 <div class="initial-note">
                   <p class="shop-note">
-                    All the brands above are available in the golf shop and we
-                    can also order products from Taylor Made and Cleveland Golf.
+                    All brands above are available in the pro shop and we
+                    can easily order products from Taylor Made and Cleveland Golf!
                   </p>
                 </div>
               </div>
               <div class="col-12">
                 <div class="specials rounded-corners">
-                  <h5>
-                   🔥 Current Pro Shop Specials
-                  </h5>
-                  <p class="deal">40% OFF Adidas Shoes in Stock</p>
-                  <p class="deal">25% OFF T-Shirts in Stock</p>
+                  <h5>🔥 Current Pro Shop Specials</h5>
+                  <p class="deal">50% OFF Vice and Bridgestone Golf Balls</p>
+                  <p class="deal">30% OFF Titleist Hats</p>
+                  <p class="deal">40-50% OFF all Apparel</p>
+                  <p class="deal">50% OFF Select FJ and Adidas shoes</p>
                 </div>
               </div>
             </div>
@@ -150,7 +150,7 @@
                 >
                   <div class="note-brow">
                     <img
-                      class="note-icon"
+                      class="note-icon injectable"
                       src="assets/images/icons/shirt-folded.svg"
                       alt=""
                     />
@@ -170,7 +170,7 @@
                 >
                   <div class="note-brow">
                     <img
-                      class="note-icon trade"
+                      class="note-icon trade injectable"
                       src="assets/images/icons/trade.svg"
                       alt=""
                     />
@@ -187,7 +187,7 @@
                 >
                   <div class="note-brow">
                     <img
-                      class="note-icon wedge"
+                      class="note-icon wedge injectable"
                       src="assets/images/icons/wedge.svg"
                       alt=""
                     />
@@ -209,7 +209,7 @@
                 >
                   <div class="note-brow">
                     <img
-                      class="note-icon putting-green"
+                      class="note-icon putting-green injectable"
                       src="assets/images/icons/putting-green.svg"
                       alt=""
                     />
