Added Lane's email to Meet the Staff page.

--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -237,7 +237,14 @@
                   <p>Lane Prewit</p>
                   <div class="dividing-line"></div>
                   <div class="title">PGA Associate</div>
-
+                  <div class="contact-details">
+                    <a href="mailto:lane@stagghillgolfclub.com"
+                      ><img
+                        src="/assets/images/icons/envelope.svg"
+                        alt=""
+                      />lane@stagghillgolfclub.com
+                    </a>
+                  </div>
                   <div class="collapsible-wrapper">
                     <div class="collapse" id="collapseExample2">
                       <div class="text-center">
