--- a/greens-fees.html
+++ b/greens-fees.html
@@ -109,7 +109,7 @@
                     <div class="th-wrap">Ride</div>
                   </th>
                   <td>$40</td>
-                  <td>$55</td>
+                  <td>$62</td>
                 </tr>
                 <tr>
                   <th scope="row">
@@ -169,7 +169,7 @@
                     <div class="th-wrap">Ride</div>
                   </th>
                   <td>$45</td>
-                  <td>$60</td>
+                  <td>$67</td>
                 </tr>
                 <tr>
                   <th scope="row">
@@ -200,8 +200,12 @@
             <hr />
             <div class="row table-preface">
               <div class="col-12 col-md-8 col-lg-6">
-                <h3>Twighlight Rates</h3>
-                <p>Time changes throughout the year.</p>
+                <h3>Twilight Rates</h3>
+                <p>
+                  Twilight start time changes throughout the year: November -
+                  March, 2pm. April - May, 3:30pm. June - August, 4pm.
+                  September, 3:30pm. October, 2:30pm.
+                </p>
               </div>
               <div class="col-12 col-md-6"></div>
             </div>
