Updating Meet the Team page (again) and added Lane Prewit to Instruction page.

--- a/instruction.html
+++ b/instruction.html
@@ -79,13 +79,13 @@
       >
         <div class="row g-5 justify-content-between pt-4 lined-row">
           <div class="col-12 col-md-5">
+            <h3>Lessons with Chad Myers, PGA</h3>
+            <p class="shop-note">Call, email, or book online today!</p>
             <img
               class="pga-member-logo"
               src="assets/images/logo/pga-member-logo.png"
               alt=""
             />
-            <h3>Lessons with Chad Myers, PGA</h3>
-            <p class="shop-note">Call, email, or book online today!</p>
             <ul>
               <li>
                 <a href="tel:7855391041"
@@ -121,7 +121,7 @@
                     />
                   </div>
                   <div class="note-title">Adult Lesson</div>
-                  <div class="price"><span>$65</span> each</div>
+                  <div class="price"><span>$70</span> each</div>
                 </div>
               </div>
               <div class="col-12 col-sm-6">
@@ -135,7 +135,7 @@
                   </div>
                   <div class="note-title">Adult 4 Lesson Series</div>
                   <div class="price">
-                    <span>$245</span>
+                    <span>$265</span>
                   </div>
                 </div>
               </div>
@@ -149,7 +149,7 @@
                     />
                   </div>
                   <div class="note-title">Adult Group Lesson</div>
-                  <div class="price"><span>$55</span> per person</div>
+                  <div class="price"><span>$60</span> per person</div>
                 </div>
               </div>
               <div class="col-12 col-sm-6">
@@ -176,7 +176,7 @@
                   </div>
                   <div class="note-title">Jr. Golfer 4 Lesson Series</div>
                   <div class="price">
-                    <span>$165</span>
+                    <span>$175</span>
                   </div>
                 </div>
               </div>
@@ -191,6 +191,95 @@
                   </div>
                   <div class="note-title">Jr. Group Lesson</div>
                   <div class="price"><span>$35</span> per person</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="container wow fadeInUp"
+        data-wow-offset="120"
+        data-wow-delay=".9s"
+      >
+        <div class="row g-5 justify-content-between lined-row lane">
+          <div class="col-12 col-md-5">
+            <h3>Lessons with Lane Prewit, PGA Associate Professional</h3>
+            <p class="shop-note">Call or email to secure your spot!</p>
+            <ul>
+              <li>
+                <a href="tel:7855391041"
+                  ><img src="/assets/images/icons/phone-flip.svg" alt="" />(785)
+                  539-1041
+                </a>
+              </li>
+              <li>
+                <a href="mailto:lane@stagghillgolfclub.com"
+                  ><img
+                    src="/assets/images/icons/envelope.svg"
+                    alt=""
+                  />lane@stagghillgolfclub.com
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="row justify-content-between g-3">
+              <div class="col-12 col-sm-6">
+                <div class="note-box">
+                  <div class="note-brow">
+                    <img
+                      class="note-icon injectable"
+                      src="assets/images/icons/adult.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="note-title">Adult Lesson</div>
+                  <div class="price"><span>$50</span> each</div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6">
+                <div class="note-box">
+                  <div class="note-brow">
+                    <img
+                      class="note-icon injectable"
+                      src="assets/images/icons/adult-4.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="note-title">Adult 4 Lesson Series</div>
+                  <div class="price">
+                    <span>$190</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-sm-6">
+                <div class="note-box">
+                  <div class="note-brow">
+                    <img
+                      class="note-icon injectable"
+                      src="assets/images/icons/jr.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="note-title">Jr. Golfer Lesson (18 & Under)</div>
+                  <div class="price"><span>$35</span> each</div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6">
+                <div class="note-box">
+                  <div class="note-brow">
+                    <img
+                      class="note-icon injectable"
+                      src="assets/images/icons/jr-4.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="note-title">Jr. Golfer 4 Lesson Series</div>
+                  <div class="price">
+                    <span>$130</span>
+                  </div>
                 </div>
               </div>
             </div>
